--- a/Pro-Book/frontend/book/book.css
+++ b/Pro-Book/frontend/book/book.css
@@ -39,6 +39,7 @@ input[type="text"] {
 }
 
 #search-result-container{
+    display: none;
     padding-top: 2%;
 }
 
@@ -106,3 +107,32 @@ input[type="text"] {
 .search-result-row .row{
     display: flex;
 }
+
+/* Center the loader */
+#loader {
+    position: absolute;
+    display: none;
+    left: 50%;
+    top: 65%;
+    z-index: 1;
+    width: 120px;
+    height: 120px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+  }
+  
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
