--- a/Pro-Book/frontend/book/detail/detail.css
+++ b/Pro-Book/frontend/book/detail/detail.css
@@ -124,3 +124,13 @@
     margin:auto;
     font-size:1em;
 }
+
+.detail-btn {
+    text-align: center;
+    color: #fff;
+    background-color:rgb(0, 174, 239);
+    border-radius: 4px;
+    border: none;
+    padding: 5px 25px;
+    margin: 0 0 0 auto;
+}
