--- a/Pro-Book/frontend/book/detail/detail.css
+++ b/Pro-Book/frontend/book/detail/detail.css
@@ -134,3 +134,11 @@
     padding: 5px 25px;
     margin: 0 0 0 auto;
 }
+
+.img-thumbnail {
+    border: 1px black solid;
+    padding: 0 15px;
+    max-height: 11vw;
+    max-width: 61%;
+    object-fit: contain;
+}
