--- a/Pro-Book/frontend/book/detail/detail.css
+++ b/Pro-Book/frontend/book/detail/detail.css
@@ -65,6 +65,17 @@
     margin: 0 0 0 auto;
 }
 
+#disabled-btn {
+    float: right;
+    text-align: center;
+    color: #fff;
+    background-color: rgb(94, 93, 93);
+    border-radius: 4px;
+    border: none;
+    padding: 5px 25px;
+    margin: 0 0 0 auto;
+}
+
 .wrapper {
     margin: auto 0 auto auto;
 }
