--- a/Pro-Book/frontend/book/detail/detail.css
+++ b/Pro-Book/frontend/book/detail/detail.css
@@ -103,6 +103,7 @@
 
 #overlay {
     display: none;
+
     position: fixed;
     height: 100vh;
     width: 100vw;
@@ -110,8 +111,10 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-#feedback {
+#feedback-modal, #otp-modal {
     display: none;
+    flex-flow: column;
+    padding:10px;
     width: 30vw;
     height: 24vh;
     background-color: white;
@@ -122,16 +125,19 @@
 }
 
 #checklist {
+    display: none;
     width: 100%;
     height: 80%;
 }
 
 #close-button-container {
     justify-content: flex-end;
-    margin-top: 10px;
 }
 
 .close-button {
+
+    border: 0;
+    background-color: #ffffff;
     color: black;
     margin-right: 3px;
 }
@@ -142,6 +148,7 @@
 }
 
 .detail-btn {
+    justify-content: right;
     text-align: center;
     color: #fff;
     background-color: rgb(0, 174, 239);
